[package]
name = "hls-downloader"
version = "0.1.0"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
failure = "0.1.8"
futures = "0.3.5"
hyper = "0.13.6"
hyper-tls = "0.4.1"
ksuid = "0.2.0"
linked-hash-map = "0.5.3"
metrics = "0.12.1"
metrics-core = "0.5.0"
metrics-runtime = "0.13.0"
tokio = { version = "0.2.21", features = ["full"] }
tracing = "0.1.9"
tracing-subscriber = "0.1.5"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"